KEL-29 odpowiedź na komentarze, pozostał do zrobienia stream z RegisterRequest