@@ -1,5 +1,6 @@
 package com.kelinci.mainapp.api;
 
+import com.sun.xml.bind.v2.TODO;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -14,8 +15,7 @@ import java.util.stream.Collectors;
 @RestController
 public class UserController {
     private OurUser ourUser;
-
-    private List<OurUser> listOfUsers = new ArrayList<>();
+    private final List<OurUser> listOfUsers = new ArrayList<>();
 
     @GetMapping(value = "/registered/lastuser")
     //czeka na wywolanie localhost:8080/users
@@ -39,57 +39,42 @@ public class UserController {
     public void register(@RequestBody RegisterRequest request) {
 
         final OurUser userFromRequest = new OurUser(request.getMail());
-        //in case the list is empty - add the userFromRequest with its randomly generated mailCode
+        //To do: zastąpić wszystko jednym streamem z komentarza Pawła
         if (listOfUsers.isEmpty()) {
-            String mailCode = generateMailCode();
-            userFromRequest.setMailCode(mailCode);
-            ourUser = userFromRequest;
-            listOfUsers.add(userFromRequest);
-            //in case the list is not empty, stream all email addresses from listOfUsers into a new List: listOfAllEmails
-            //the list maps and collects only email addresses from listOfUsers
-            //eventually if listOfAllEmails does not contain the email from the incoming user, generate mailCode and add user
-
+            generateAndSetMailCode(userFromRequest);
         } else {
-            List<String> listOfAllEmails = listOfUsers.stream().map(OurUser::getMail).collect(Collectors.toList());
-
+            List<String> listOfAllEmails = listOfUsers.stream().map(OurUser::getMail).toList();
             if (!(listOfAllEmails.contains(userFromRequest.getMail()))) {
-
-                String mailCode = generateMailCode();
-                userFromRequest.setMailCode(mailCode);
-                ourUser = userFromRequest;
-                listOfUsers.add(userFromRequest);
+                generateAndSetMailCode(userFromRequest);
             }
         }
     }
-
 
     @PostMapping(value = "/registered/confirm")
     public void confirm(@RequestBody ConfirmationRequest confirmation) {
 
-        final OurUser userToBeConfirmed = new OurUser(confirmation.getMail(), confirmation.getMailCode(), false);
-
         for (OurUser userToBeChecked : listOfUsers) {
-            if (areEmailsAndMailCodesTheSame(userToBeConfirmed, userToBeChecked)) {
-                listOfUsers.remove(userToBeConfirmed);
-                userToBeConfirmed.setConfirmed(true);
-                listOfUsers.add(userToBeConfirmed);
-                //tutaj jedyne co wykombinowalem to usunac usera z listy, ustawic mu setConfirmed na true, i potem dodac ponownie do listy
-                //bo na to wygląda, że zmiana pól obiektu nie updatuje tych pól jeśli obiekt jest już w liście - dobrze wiedziec
+            if (areEmailsEndMailCodesTheSame(confirmation, userToBeChecked)) {
+                userToBeChecked.setConfirmed(true);
             }
-            ourUser = userToBeConfirmed;
         }
     }
 
+    private static boolean areEmailsEndMailCodesTheSame(ConfirmationRequest confirmation, OurUser userToBeChecked) {
+        return Objects.equals(confirmation.getMail(), userToBeChecked.getMail()) && Objects.equals(confirmation.getMailCode(), userToBeChecked.getMailCode());
+    }
+
+    private void generateAndSetMailCode(OurUser userFromRequest) {
+        String mailCode = generateMailCode();
+        userFromRequest.setMailCode(mailCode);
+        ourUser = userFromRequest;
+        listOfUsers.add(userFromRequest);
+    }
+
     private static String generateMailCode() {
-        Integer random = (int) (1000000 * Math.random());
-        String mailCode = Integer.toString(random);
-        return mailCode;
+        int random = (int) (1000000 * Math.random());
+        return Integer.toString(random);
     }
-
-    private static boolean areEmailsAndMailCodesTheSame(OurUser userToBeConfirmed, OurUser userToBeChecked) {
-        return Objects.equals(userToBeChecked.getMail(), userToBeConfirmed.getMail()) && Objects.equals(userToBeChecked.getMailCode(), userToBeConfirmed.getMailCode());
-    }
-
 
 }
 
